新建model Icm::GroupAssignmentDetail 以及相应的表 icm_group_assignment_detail
    create_table "icm_group_assignment_details", :force => true do |t|
      t.string   "group_assignment_id",       :limit => 30,  :null => false
      t.string   "source_type",     :limit => 30,  :null => false
      t.integer   "source_id"
      t.string   "status_code",       :limit => 30,  :null => false
      t.integer  "created_by"
      t.integer  "updated_by"
      t.datetime "created_at"
      t.datetime "updated_at"
    end
移除icm_group_assignments中，之前用来记录范围的字段：

    remove_column :icm_group_assignments, :customer_company_id
    remove_column :icm_group_assignments, :customer_organization_id
    remove_column :icm_group_assignments, :customer_department_id
    remove_column :icm_group_assignments, :customer_site_group_code
    remove_column :icm_group_assignments, :customer_site_code
    remove_column :icm_group_assignments, :customer_person_id
    remove_column :icm_group_assignments, :assign_type
    remove_column :icm_group_assignments, :service_code
    remove_column :icm_group_assignments, :external_system_code
更改用于自动分派支持组的JOB，从icm_group_assignment_details中去查询

--- a/app/views/icm/group_assignments/index.html.erb
+++ b/app/views/icm/group_assignments/index.html.erb
@@ -24,18 +24,22 @@
           </div>
           <div id="status_code" style="display:none">
             <%= check_img("{status_code}") %>
-          </div>              
+          </div>
+          <div id="vendor_group_flag" style="display:none">
+            <%= check_img("{vendor_group_flag}")%>
+          </div>
+          <div id="oncall_group_flag" style="display:none">
+            <%= check_img("{oncall_group_flag}")%>
+          </div>
         </div>
         <%= datatable("group_assignments_list",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"support_group_name",:label=>t(:label_irm_support_group_show),:sortable=>true,:searchable=>true},
-                       {:key=>"assign_type_name",:label => t(:label_icm_group_assignment_type)},
-                       {:key=>"company_name",:label=>t(:label_irm_company_name),:sortable=>true,:searchable=>true},
-                       {:key=>"organization_name",:label=>t(:label_irm_organization),:sortable=>true, :searchable => true},
-                       {:key=>"department_name",:label=>t(:label_irm_location_department),:sortable=>true, :searchable => true},
-                       {:key=>"person_name",:label=>t(:label_irm_person),:sortable=>true, :searchable => true},
-                       {:key=>"external_system_name", :label=>t(:label_uid_external_system)},
-                       {:key=>"service_catalog_name", :label=>t(:label_slm_service_catalog)},
+                       {:key=>"support_group_name",:label=>t(:label_irm_support_group_show),:sortable=>true,:searchable=>true,:width=>"200px"},
+                       {:key=>"company_name",:label=>t(:label_irm_support_group_company_name),:sortable=>true,:searchable=>true,:width=>"80px"},
+                       {:key=>"organization_name",:label=>t(:label_irm_support_group_organization_name),:sortable=>true,:searchable=>true,:width=>"50px"},
+                       {:key=>"support_role_name",:label=>t(:label_irm_support_group_support_role),:sortable=>true,:width=>"50px"},
+                       {:key=>"vendor_group_flag",:label=>t(:label_irm_support_group_vendor_group),:formatter=>"Y.irm.template",:sortable=>true, :width=>"30px"},
+                       {:key=>"oncall_group_flag",:label=>t(:label_irm_support_group_oncall_group),:formatter=>"Y.irm.template",:sortable=>true, :width=>"30px"},
                        {:key=>"status_code",:label=>t(:active),:width=>"40px",:formatter=>"Y.irm.template"}
                        ],{:paginator_box=>"groupAssignPaginator"})%>
         <div id="groupAssignPaginator"></div>
