--- a/app/views/icm/group_assignments/_new_form.html.erb
+++ b/app/views/icm/group_assignments/_new_form.html.erb
@@ -46,74 +46,81 @@
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
-            <tr>
-              <td class="labelCol"><label for="assign_type"><%= t :label_icm_group_assignment_type %></label></td>
-              <td class="dataCol"><%= f.select :assign_type,
-                                                 options_for_select(Irm::LookupValue.get_lookup_value("ICM_GROUP_ASSIGN_TYPE").collect { |p| [p.wrap_meaning, p.lookup_code]}) %></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="ass_company"><%=t(:label_irm_company_name)%></label></td>
-              <td class="dataCol"><%=f.select :customer_company_id,
-                                              available_ass_companies,
-                                              {},
-                                              {:id=>"ass_company"}%></td>
-              <td class="labelCol"><%= t :label_uid_external_system %></td>
-              <td class="dataCol">
-                <%=f.select :external_system_code,
-                            nullable_options_for_select(available_external_systems.collect{|p| [p[:system_name], p.external_system_code]},@group_assignment.external_system_code),
-                            {},
-                            {:id=>"ass_external_system"}%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="ass_organization"><%=t(:label_irm_location_organization)%></label></td>
-              <td class="dataCol"><%=f.select :customer_organization_id,
-                                            nullable_options_for_select([],nil),
-                                            {},
-                                            {:id=>"ass_organization",
-                                             :depend=>"ass_company",
-                                             :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                                             :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_organizations",:format=>"json",:customer_company_id=>"{ass_company}")}%></td>
-              <td class="labelCol">
-                <%= t :label_slm_service_category %>
-              </td>
-              <td class="dataCol">
-                  <%=f.select :service_code,
-                            nullable_options_for_select([],@group_assignment.service_code),
-                            {},
-                            {:id=>"incident_request_service_code",
-                             :depend=>"ass_external_system",
-                             :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                             :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_all_slm_services",:format=>"json",
-                                             :external_system_code=>"{ass_external_system}")}%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="ass_department"><%=t(:label_irm_location_department)%></label></td>
-              <td class="dataCol"><%=f.select :customer_department_id,
-                                              nullable_options_for_select([],nil),
-                                              {},
-                                              {:id=>"ass_department",
-                                               :depend=>"ass_organization",
-                                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                                               :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_departments",:format=>"json",:customer_organization_id=>"{ass_organization}")}%></td>
+        </tbody>
+      </table>
+    </div>
 
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
+
+
+  </div>
+
+  <div class="pbBody">
+    <div class="pbSubheader first tertiaryPalette">
+      <h3><%= t(:label_icm_group_assignment_detail) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label for="ass_people"><%=t(:label_irm_person)%></label></td>
-              <td class="dataCol"><%=f.select :customer_person_id,
-                                              nullable_options_for_select([],nil),
-                                              {},
-                                              {:id=>"ass_people",
-                                              :depend=>"ass_department",
-                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                                              :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_people",:format=>"json",:customer_department_id=>"{ass_department}")}%></td>
+              <td class="labelCol"><label for="actionType"><%=t(:label_irm_wf_rule_action_type)%></label></td>
+              <td class="dataCol" colspan="3" style="width:82%">
+                <div class="actonType">
+                     <label><%= t(:search) %></label>
+                </div>
+                <div class="actonType">
+                  <select id="actionType">
+                    <option value="C"><%= t(:label_irm_company_show) %></option>
+                    <option value="O"><%= t(:label_irm_organization) %></option>
+                    <option value="D"><%= t(:label_irm_department_show) %></option>
+                    <option value="P"><%= t(:label_irm_person) %></option>
+                    <option value="E"><%= t(:label_uid_external_system) %></option>
+                    <option value="S"><%= t(:label_slm_service_catalog) %></option>
+                  </select>
+                </div>
+                <div class="actonType">
+                  <input type="text" size="30" id="duelQuery"/>
+                </div>
+                <div class="actonType">
+                   <div class="button"><a href="javascript:void(0)" id="duelSearch"><%=t(:search) %></a></div>
+                </div>
+              </td>
+            </tr>
+            <tr id="actions">
               <td class="labelCol"></td>
-              <td class="dataCol"></td>
+              <td class="dataCol" colspan="3" width="82%">
+                <table class="duel">
+                  <tr class="duelTitle">
+                    <th><%= t(:duel_selectable)%></th>
+                    <th></th>
+                    <th><%= t(:duel_selected)%></th>
+                  </tr>
+                  <tr class="duelList">
+                    <td class="sourceCell">
+                      <%= select_tag_alias(:source,ava_group_assignment_targets,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
+                    </td>
+                    <td class="buttonCell">
+                      <div class="text"><%= t(:add) %></div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelAdd"><img title="<%= t(:add) %>" class="rightArrowIcon" alt="<%= t(:add) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelRemove"><img title="<%= t(:delete) %>" class="leftArrowIcon" alt="<%= t(:delete) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="duelingText"><%= t(:delete) %></div>
+                    </td>
+                    <td class="targetCell">
+                      <%= hidden_field_tag(:selected_actions, "", {:id=>"selectedActions"}) %>
+                      <%= select_tag_alias(:target,[],nil,{:id=>"target",:multiple=>true,:size=>14}) %>
+                    </td>
+                  </tr>
+                </table>
+              </td>
             </tr>
         </tbody>
       </table>
@@ -134,12 +141,22 @@
   </div>
 </div>
 <% end %>
+
 <script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#ass_company",target:["#ass_organization"]});
-     new Y.CascadeSelect({source: "#ass_organization",target:["#ass_department"]});
-     new Y.CascadeSelect({source: "#ass_department",target:["#ass_people"]});
-     new Y.CascadeSelect({source: "#ass_external_system",target:["#incident_request_service_code"]});
+  GY.use("duelselect",function(Y){
+    var duelselect = new Y.DuelSelect({source:"#source",target:"#target",valueNode:"#selectedActions",type:Y.one("#actionType").get("value"),addButton:"#duelAdd",removeButton:"#duelRemove"});
+    Y.one("#actionType").on("change",function(e){
+      Y.one("#duelQuery").set("value","");
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelSearch").on("click",function(e){
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelQuery").on("keydown",function(e){
+      if(e.keyCode==13){
+          e.preventDefault();
+          duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+      }
+    });
   });
 </script>
-
