--- a/app/views/icm/group_assignments/_edit_form.html.erb
+++ b/app/views/icm/group_assignments/_edit_form.html.erb
@@ -1,6 +1,6 @@
 <%= setting_title %>
 
-<%= form_for(@group_assignment,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@group,:url=>{:controller => "icm/group_assignments", :action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -16,7 +16,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @group_assignment%>
+    <%= error_for @group%>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
@@ -33,16 +33,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label for="ass_support_group"><%=t(:label_icm_incident_request_support_group)%></label></td>
-              <td class="dataCol"><%=f.select :support_group_code,
-                                              available_ass_support_groups,
-                                              {},
-                                              {:id=>"support_group", :required => true}%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="ass_status_code"><%=(t :active)%></label></td>
-              <td class="dataCol"><%=f.select :status_code, available_active_status, {}, {:id => "ass_status_code"}%></td>
+              <td class="dataCol"><%= @group[:name]%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
@@ -113,7 +104,7 @@
                       <div class="duelingText"><%= t(:delete) %></div>
                     </td>
                     <td class="targetCell">
-                      <%= hidden_field_tag(:selected_actions, own_group_assignment_targets(@group_assignment.id), {:id=>"selectedActions"}) %>
+                      <%= hidden_field_tag(:selected_actions, own_group_assignment_targets(@group.id), {:id=>"selectedActions"}) %>
                       <%= select_tag_alias(:target,[],nil,{:id=>"target",:multiple=>true,:size=>14}) %>
                     </td>
                   </tr>
