修正组指派首页表格中的操作链接为“编辑”

--- a/app/views/icm/group_assignments/index.html.erb
+++ b/app/views/icm/group_assignments/index.html.erb
@@ -18,7 +18,7 @@
       <div class="pbBody">
         <div id="group_assignments_list" class="datatable" style="width:100%">
           <div id="id" style="display:none">
-            <%= link_to(t(:label_icm_group_assignment_edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
+            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
           </div>
           <div id="status_code" style="display:none">
             <%= check_img("{status_code}") %>
