--- a/app/views/irm/global_settings/_show.html.erb
+++ b/app/views/irm/global_settings/_show.html.erb
@@ -36,6 +36,11 @@
               </td>
             </tr>
             <tr>
+              <td class="labelCol"><label><%=(@settings.query_by_code("HOST_PORT").first[:name])%></label></td>
+              <td class="data2Col"><%= @settings.query_by_code("HOST_PORT").first[:value]%>
+              </td>
+            </tr>
+            <tr>
               <td class="labelCol"><label><%=(@settings.query_by_code("EMISSION_EMAIL_ADDRESS").first[:name])%></label></td>
               <td class="data2Col"><%= @settings.query_by_code("EMISSION_EMAIL_ADDRESS").first[:value]%>
               </td>
