--- a/public/themes/salesforce2/stylesheets/common.css
+++ b/public/themes/salesforce2/stylesheets/common.css
@@ -970,6 +970,22 @@ a:hover .rightArrowIcon{
     width: 24px;
 }
 a:hover .leftArrowIcon{background-position: left -80px;}
+.upArrowIcon{
+    background: url("../images/combobox_arrows_sprite.gif") no-repeat scroll 0 0 transparent;
+    background-position: left -240px;
+    height: 20px;
+    margin: 0 2px;
+    width: 24px;
+}
+a:hover .upArrowIcon{background-position: left -260px;}
+.downArrowIcon{
+    background: url("../images/combobox_arrows_sprite.gif") no-repeat scroll 0 0 transparent;
+    background-position: left -300px;
+    height: 20px;
+    margin: 0 2px;
+    width: 24px;
+}
+a:hover .downArrowIcon{background-position: left -320px;}
 div.actonType{float:left;}
 
 .tsidMenu-tr{float:right\9;height:12px\9;border-top: 1px solid #f9f9f9\9;border-right: 1px solid #86b8c8\9;width: 12px\9;background-color:white\9}
