--- a/app/views/irm/wf_process_instances/_process_history.html.erb
+++ b/app/views/irm/wf_process_instances/_process_history.html.erb
@@ -63,9 +63,19 @@
                    <% process_infos.each_with_index do |pi,index| %>
                     <tbody  class="yui3-datatable-data processInfo<%=index%2==0? "Even":"Odd"%>">
                      <tr id="<%=pi[:process_instance].id%>" class="yui3-datatable-even processInstance">
-                       <td class="yui3-column" colspan="6">
+                       <td class="yui3-column" colspan="2">
                          <div class='yui3-datatable-liner'>
                            <b><%=t(:label_irm_wf_approval_process)%>: <%= pi[:process_instance][:process_name]  %></b>
+                          </div>
+                       </td>
+                       <td class="yui3-column" colspan="3">
+                         <div class='yui3-datatable-liner'>
+                           <b><%=t(:label_irm_wf_process_instance_submitter_name)%>: <%= pi[:process_instance][:submitter_name]  %></b>
+                          </div>
+                       </td>
+                       <td class="yui3-column">
+                         <div class='yui3-datatable-liner'>
+                           <%= pi[:process_instance][:comment]  %>
                           </div>
                        </td>
                        <td class="yui3-column">
