--- a/app/views/irm/object_attributes/_edit_lookup_column.html.erb
+++ b/app/views/irm/object_attributes/_edit_lookup_column.html.erb
@@ -30,14 +30,14 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
           <tr>
+            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
+            <td class="dataCol"><%=@object_attribute.attribute_name%></td>
             <td class="labelCol"><label for="object_attribute_name"><%=t(:label_irm_object_attribute_name)%></label></td>
             <td class="dataCol">
               <%=f.text_field :name, {:required=>true,:id=>"object_attribute_name"}%>
               <%= f.hidden_field(:field_type,:value=>"CUSTOMED_FIELD") %>
               <%= f.hidden_field(:attribute_type) %>
             </td>
-            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
-            <td class="dataCol"><%=f.text_field :attribute_name, {:required=>true}%></td>
           </tr>
           <tr>
             <td class="labelCol"><label for="relation_bo_code"><%=t(:label_irm_object_attribute_relation_bo_code)%></label></td>
@@ -51,14 +51,8 @@
           <tr>
             <td class="labelCol"><label for="relation_table_alias_name"><%=t(:label_irm_object_attribute_relation_table_alias_name)%></label></td>
             <td class="dataCol"><%=f.text_field :relation_table_alias_name, {:id=>"relation_table_alias_name",:required=>true}%></td>
-            <td class="labelCol"><label for="exists_relation_flag"><%=t(:label_irm_object_attribute_exists_relation_flag)%></label></td>
-            <td class="dataCol"><%=f.check_box :exists_relation_flag,{:id=>"exists_relation_flag"}%></td>
-          </tr>
-          <tr>
-            <td class="labelCol"><label for="relation_type"><%=t(:label_irm_object_attribute_relation_type)%></label></td>
-            <td class="dataCol"><%=f.text_field :relation_type, {:id=>"relation_type"}%></td>
-            <td class="labelCol"><label for="lov_code"><%=t(:label_irm_object_attribute_lov_code)%></label></td>
-            <td class="dataCol"><%=f.lov_field :lov_code,"LIST_OF_VALUE",{},{:id=>"lov_code"}%></td>
+            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_type)%></label></td>
+            <td class="dataCol"><%=f.select :field_type, available_object_attribute_field_type%></td>
           </tr>
           <tr>
             <td class="labelCol"><label for="object_attribute_filter_flag"><%=t(:label_irm_object_attribute_filter_flag)%></label></td>
@@ -101,6 +95,7 @@
   </div>
 </div>
 <% end %>
+
 <script type="text/javascript">
   GY.use("cascadeselect",function(Y){
      new Y.CascadeSelect({source: "#relation_bo_code",target:["#relation_column"]});
