--- a/app/views/irm/object_attributes/_edit_table_column.html.erb
+++ b/app/views/irm/object_attributes/_edit_table_column.html.erb
@@ -34,12 +34,13 @@
               <td class="dataCol"><%=f.text_field :name,:value=>@object_attribute[:name], :required=>true ,:id=>"object_attribute_name"%></td>
               <td class="labelCol"><label for="object_attribute_attribute_name"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
               <td class="dataCol"><%=@object_attribute.attribute_name%></td>
+              <%= f.hidden_field(:attribute_type) %>
             </tr>
             <tr>
               <td class="labelCol"><label for="object_attribute_lov_code"><%=t(:label_irm_object_attribute_lov_code)%></label></td>
               <td class="dataCol"><%=f.lov_field :lov_code,"LIST_OF_VALUE",{},{:id=>"object_attribute_lov_code"}%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
+              <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_type)%></label></td>
+              <td class="dataCol"><%=f.select :field_type, available_object_attribute_field_type%></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="object_attribute_filter_flag"><%=t(:label_irm_object_attribute_filter_flag)%></label></td>
