--- a/app/views/irm/object_attributes/show.html.erb
+++ b/app/views/irm/object_attributes/show.html.erb
@@ -5,7 +5,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= @object_attribute.attribute_name %></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%= @object_attribute.attribute_type_name %>:<%= @object_attribute.attribute_name %></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @object_attribute}%></div>
             <div class="button"><%= link_to t(:back), {:controller=>"irm/business_objects",:action=>"show",:id=>@business_object.id}%></div>
