--- a/app/views/irm/report_types/show.html.erb
+++ b/app/views/irm/report_types/show.html.erb
@@ -90,3 +90,56 @@
       </div>
     </div>
 </div>
+
+<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
+<div class="listRelatedObject setupBlock">
+    <div class="bPageBlock">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_report_type_usable_fields) %></h2></td>
+              <td class="pbButton">
+                <div class="button"><%= link_to t(:label_irm_report_type_edit_section_layout), {:controller => "irm/report_type_sections",:action => "index", :report_type_id => @report_type.id}%></div>
+              </td>
+              <td class="pbHelp">
+                <div></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+        <div class="datatable">
+          <div class="yui3-widget yui3-datatable">
+            <div class="yui3-datatable-content">
+              <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
+                <thead class="yui3-datatable-columns">
+                  <tr class="yui3-datatable-first yui3-datatable-last">
+                    <th class="yui3-column">
+                      <div class="yui3-datatable-liner"><%=t(:label_irm_report_type_usable_field_source)%></div>
+                    </th>
+                    <th class="yui3-column">
+                      <div class="yui3-datatable-liner"><%=t(:label_irm_report_type_usable_count)%></div>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody class="yui3-datatable-data">
+                  <% report_type_fields(@report_type).each do |obj| %>
+                    <tr class="yui3-datatable-even">
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'><%=obj[0]%></div>
+                      </td>
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'><%=obj[2]%></div>
+                      </td>
+                    </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
