delayed job log record the end time

--- a/app/views/irm/monitor_approval_mails/index.html.erb
+++ b/app/views/irm/monitor_approval_mails/index.html.erb
@@ -59,7 +59,7 @@
                   </thead>
                   <tbody class="yui3-datatable-data">
                   <% @monitor.each do |log| %>
-                  <tr id="<%=log[:incident_request_id]%>" class="yui3-datatable-even">
+                  <tr class="yui3-datatable-even">
                     <td class="yui3-column">
                       <div class='yui3-datatable-liner'>
                         <%=log[:approval_process_name]%>
