--- a/app/views/irm/x_report_lists/_report_category.html.erb
+++ b/app/views/irm/x_report_lists/_report_category.html.erb
@@ -12,7 +12,7 @@
                 </div>
                 <div class="lbBody">
                   <div class="mainLink">
-                    <%= link_to t(:go_to_report),url_for(:controller=>"irm/report_lists",
+                    <%= link_to t(:go_to_report),url_for(:controller=>"x_report_lists",
                                                              :action => "index") %>
                   </div>
                 </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="lbBody">
                   <div class="mainLink">
-                    <%= link_to t(:go_to_report),url_for(:controller=>"irm/report_lists",
+                    <%= link_to t(:go_to_report),url_for(:controller=>"x_report_lists",
                                                              :action => "index") %>
                   </div>
                 </div>
