--- a/app/views/irm/kanbans/select_lanes.html.erb
+++ b/app/views/irm/kanbans/select_lanes.html.erb
@@ -25,16 +25,15 @@
           <div class="pbBody">
                 <div id="available_lanes_list" class="datatable" style="width:100%;">
                   <div id="id" style="display:none">
-                     <%= check_box_tag "irm_kanban_lanes[ids][]","{irm_lane_id}"%>
+                     <%= check_box_tag "irm_kanban_lanes[ids][]","{id}"%>
                   </div>
                 </div>
                 <%= datatable("available_lanes_list",url_for(:action=>"get_available_lanes", :id=>@kanban),
                           [{:key=>"id",:label=>t(:select_ac),:formatter=>"Y.irm.template",:width=>"20px"},
-                           {:key=>"irm_lane_id",:hidden => true},
                            {:key=>"lane_code",:label=>t(:label_irm_lane_code),:sortable=>true, :width => "15%"},
                            {:key=>"lane_name",:label=>t(:name),:sortable=>true, :width => "25%"},
                            {:key=>"lane_description",:label=>t(:description),:sortable=>true},
-                           {:key=>"lane_limit",:label=>t(:label_irm_lane_limit),:sortable=>true, :width => "80px"}
+                           {:key=>"limit",:label=>t(:label_irm_lane_limit),:sortable=>true, :width => "80px"}
                            ],
                            {:row_perpage=>5})%>
           </div>
