--- a/app/views/irm/cards/_new_step_1.html.erb
+++ b/app/views/irm/cards/_new_step_1.html.erb
@@ -1,13 +1,12 @@
-<%= setting_title %>
-<%= form_for(@card,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@card,:url=>{:action=>"new", :step => 2},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_card_edit)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_card_new)%></h2></td>
           <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
+            <div class="button"><%= f.submit t(:next)%></div>
             <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
           </td>
         </tr>
@@ -32,7 +31,7 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_card_code)%></label></td>
-              <td class="data2Col"><%= @card.card_code%></td>
+              <td class="data2Col"><%=f.text_field :card_code, :required=>true, :irm_uppercase => true%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :name)%></label></td>
@@ -50,9 +49,15 @@
               <td class="labelCol"><label><%=(t :label_irm_card_font_color)%></label></td>
               <td class="data2Col"><%=f.select :font_color, options_for_select(card_background_color_list)%></td>
             </tr>
+            <tr>
+              <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
+              <td class="data2Col"><%=f.blank_select :bo_code, available_business_object, :required => true%></td>
+            </tr>
         </tbody>
       </table>
     </div>
+
+
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -60,7 +65,7 @@
         <tr>
           <td class="pbTitle"></td>
           <td id="bottomButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
+            <div class="button"><%= f.submit t(:next)%></div>
             <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
           </td>
         </tr>
